test/interp/spec/start.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/start.wast
(;; STDOUT ;;;
assert_invalid error:
  third_party/testsuite/start.wast:2:39: function variable out of range (max 1)
  (module (func (i32.const 1)) (start 1))
                                      ^
assert_invalid error:
  third_party/testsuite/start.wast:8:5: start function must not return anything
    (start $main)
    ^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/start.wast:15:5: start function must be nullary
    (start $main)
    ^^^^^^^^^^^^^
$invoke_1() => void
$invoke_3() => void
$invoke_1() => void
$invoke_3() => void
called import spectest.print(i32:1) => void
called import spectest.print(i32:2) => void
6/6 tests passed.
;;; STDOUT ;;)
